<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Breath trainer</string>
    <string name="breathin">breathin</string>
    <string name="choose_type">Choose type</string>
    <string name="br_in_time">Вдох</string>
    <string name="delay_in_time">Задержка на вдохе</string>
    <string name="delay_out_time">на выдох</string>
    <string name="br_out_time">выдох</string>
    <string name="nm_counts">Кол.во циклов</string>
    <string name="done">Done</string>
    <string name="brindelaytime">на вдох</string>
    <string name="rest_text">Rest time</string>
    <string name="delete">Delete</string>
    <string name="default_string">Make default</string>
    <string name="start">Start!</string>
    <string name="resting">Отдых</string>
    <string name="holding">Задержка</string>
    <string name="breath_out">Выдох</string>
    <string name="breath_in">Вдох</string>
    <string name="awaiting">Ожидаю</string>
    <string name="sound">Sound</string>
    <string name="vibro">Vibration</string>
    <string name="enable_sound">Enable sound</string>
    <string name="sound_on">sound_enabled</string>
    <string name="sound_phase_change">sound_phase</string>
    <string name="sound_periodic">Every minute</string>
    <string name="ringtone">ringtone</string>
    <string name="choose_ringtone">Choose sound</string>
    <string name="vibro_on">vibro_on</string>
    <string name="enabled">Enabled</string>
    <string name="vibro_phase_change">vibro_phase</string>
    <string name="on_phase_change">On phase change</string>
    <string name="every_minute">Every minute</string>
    <string name="vibro_periodical">vibro_periodical</string>
    <string name="vibro_duration">vibro_duration</string>
    <string name="duration">Duration</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometer_on">accel_enabled</string>
    <string name="resume">Resume</string>
    <string name="cycle">Cycle:</string>
    <string name="Pause">Pause</string>
    <string name="Skip">Skip</string>
    <string name="choose_prog">Choose program:</string>
    <string name="file_exists">The program with the given name already exists. Specify another name</string>
    <string name="specify_prog_name">New program name</string>
    <string name="create">create</string>
    <string name="stop_training">Stop training</string>
    <string name="breath_training">Breath Training</string>
</resources>
