<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"


	android:id="@+id/scrollView1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Spinner
			android:entries="@array/primitiveTypes"

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:prompt="@string/choose_type"
			android:id="@+id/primitive_type_select"
			android:layout_margin="5dip"></Spinner>
		<EditText
			android:layout_height="wrap_content"
			android:hint="Name (optional)"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center_vertical"
			android:id="@+id/editName"
			android:inputType="text"></EditText>
		<TableRow
			android:baselineAligned="false"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/Br_in_row">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:id="@+id/Br_in_text"
				android:text="@string/br_in_time"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:id="@+id/editA"
				android:inputType="number"></EditText>
			<TextView
				android:layout_height="wrap_content"
				android:text="+count*"
				android:id="@+id/math"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"></TextView>
			<EditText
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:layout_height="wrap_content"
				android:id="@+id/editB"
				android:inputType="number"></EditText>
		</TableRow>
		<TableRow
			android:id="@+id/hold_in_row"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:id="@+id/Delay_in_text"
				android:text="@string/delay_in_time"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:id="@+id/editC"
				android:inputType="number"></EditText>
			<TextView
				android:layout_height="wrap_content"
				android:text="+count*"
				android:id="@+id/math2"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="left"
				android:id="@+id/editD"
				android:inputType="number"></EditText>
		</TableRow>
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/br_out_row">
			<TextView
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:id="@+id/br_out_text"
				android:text="@string/br_out_time"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:id="@+id/editE"
				android:inputType="number"></EditText>
			<TextView
				android:layout_height="wrap_content"
				android:text="+count*"
				android:layout_gravity="center_vertical"
				android:id="@+id/math3"
				android:layout_width="wrap_content"
				android:layout_weight="1"></TextView>
			<EditText
				android:id="@+id/editF"
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:inputType="number"></EditText>
		</TableRow>
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/delay_out_row">
			<TextView
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:id="@+id/delay_out_text"
				android:text="@string/delay_out_time"></TextView>
			<EditText
				android:id="@+id/EditG"
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:inputType="number"></EditText>
			<TextView
				android:layout_height="wrap_content"
				android:text="+count*"
				android:layout_gravity="center_vertical"
				android:id="@+id/math4"
				android:layout_width="wrap_content"
				android:layout_weight="1"></TextView>
			<EditText
				android:id="@+id/EditH"
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:inputType="number"></EditText>
		</TableRow>
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/TableRow03">
			<TextView
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:id="@+id/Counts_text"
				android:text="@string/nm_counts"></TextView>
			<EditText
				android:id="@+id/EditCounts"
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:inputType="number"></EditText>
		</TableRow>
		<TableRow
			android:id="@+id/Rest_row"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:text="@string/rest_text"
				android:id="@+id/rest_text"></TextView>
			<EditText
				android:id="@+id/editRest"
				android:layout_height="wrap_content"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:inputType="number"></EditText>
		</TableRow>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/buttonDone"
			android:text="@string/done"
			android:layout_margin="5dip"></Button>
	</TableLayout>

</ScrollView>
